--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
@@ -7,32 +7,41 @@
     android:layout_height="match_parent"
     tools:context=".AllCardActivity">
 
-    <android.support.v7.widget.Toolbar
+    <com.citiexchangeplatform.pointsleague.TitleBar
         android:id="@+id/toolbar_all_card"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_below="@+id/toolbar_all_card"
+        android:id="@+id/layout_search_all_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarTheme" />
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/bg_search_bar"
+        android:orientation="horizontal">
 
+        <SearchView
+            android:id="@+id/search_all_card"
+            android:layout_width="match_parent"
+            android:layout_marginEnd="10dp"
+            android:layout_height="wrap_content"
+            android:queryHint="搜索"
+            android:background="@null"
+            android:focusable="false"
+            android:focusableInTouchMode="false">
+        </SearchView>
 
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_below="@+id/toolbar_all_card"
+        android:layout_below="@+id/layout_search_all_card"
         android:id="@+id/recyclerView_all_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/floatingActionButton_all_card"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="20dp"
-        android:clickable="true"
-        app:backgroundTint="@color/colorOrange"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
 </RelativeLayout>
