--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
@@ -3,96 +3,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".DetailFindPayActivity">
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar_detail_find_pay"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:minHeight="?attr/actionBarSize"-->
-        <!--android:theme="?attr/actionBarTheme" />-->
+
 
     <com.citiexchangeplatform.pointsleague.TitleBar
-        android:id="@+id/title_bar"
+        android:id="@+id/toolbar_detail_find_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <LinearLayout
+    <RelativeLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical"
-        android:layout_marginTop="30dp"
-        >
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView_name_detail_find_pay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="name"
-            android:layout_gravity="center"
-            android:textSize="24sp"/>
-
-        <View
-            android:background="@color/colorUnable"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="3dp"/>
+            android:layout_height="match_parent">
+            <android.support.v7.widget.CardView
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="140dp"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="3dp"
+                app:cardPreventCornerOverlap="false">
+                <LinearLayout
+                    android:layout_marginTop="80dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/textView_points_detail_find_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="XX.XXP"
+                        android:textStyle="bold"
+                        android:textSize="28sp"/>
+                    <TextView
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="30dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/textView_description_detail_find_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="描述描述描述描述描述描述描述描述描述描述"
+                        android:maxLines="2"
+                        android:textColor="#858585"
+                        android:textSize="18sp"
+                        />
 
-        <TextView
-            android:id="@+id/textView_description_detail_find_pay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="description"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            android:textSize="18sp" />
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="30dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            >
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:layout_height="match_parent"
+                                android:text="数量"
+                                android:textColor="#858585"
+                                android:textSize="20sp"
+                                />
+                            <FrameLayout
+                                android:layout_weight="1"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content">
+                                <LinearLayout
+                                    android:layout_gravity="end"
+                                    android:orientation="horizontal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent">
+                                    <Button
+                                        android:layout_width="30dp"
+                                        android:layout_height="match_parent"
+                                        android:background="@null"
+                                        android:text="-"
+                                        android:textSize="24sp"/>
+                                    <TextView
+                                        android:layout_gravity="center_vertical"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="2"
+                                        android:textSize="24sp"/>
+                                    <Button
+                                        android:layout_width="40dp"
+                                        android:layout_height="match_parent"
+                                        android:background="@null"
+                                        android:text="+"
+                                        android:textSize="24sp"/>
+                                </LinearLayout>
+                            </FrameLayout>
+                        </LinearLayout>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/colorUnable"/>
+                    </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView_points_detail_find_pay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="points"
-            android:layout_gravity="center_horizontal"
-            android:textSize="18sp"/>
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/textView_time_detail_find_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="有效期截至 2018-10-10"
+                        android:maxLines="2"
+                        android:textColor="#858585"
+                        android:textSize="16sp"
+                        />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-        <TextView
-            android:id="@+id/textView_time_detail_find_pay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="time"
-            android:layout_gravity="center_horizontal"
-            android:textSize="18sp"/>
+        </RelativeLayout>
 
-        <View
-            android:background="@color/colorUnable"
+        <android.support.v7.widget.CardView
+            app:cardBackgroundColor="#FF8225"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="465dp"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="3dp"
+            app:cardPreventCornerOverlap="false">
+            <Button
+                android:id="@+id/button_buy_detail_find_pay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:text="兑      换"
+                android:textColor="@color/colorWhite"
+                android:textSize="22sp"/>
+        </android.support.v7.widget.CardView>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="3dp"/>
+            android:layout_height="match_parent">
+            <android.support.v7.widget.CardView
+                android:layout_centerHorizontal="true"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="3dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/loading_card"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    />
+            </android.support.v7.widget.CardView>
 
-    </LinearLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/button_detail_find_pay"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="确认兑换"
-            android:backgroundTint="@color/colorPrimary"/>
-
-    </FrameLayout>
+        </RelativeLayout>
 
 
 
+    </RelativeLayout>
 
 
 </LinearLayout>
