--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_history_exchange.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_history_exchange.xml
@@ -7,39 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".HistoryExchangeActivity">
 
-    <android.support.v7.widget.Toolbar
+
+    <com.citiexchangeplatform.pointsleague.TitleBar
         android:id="@+id/toolbar_history_exchange"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarTheme" />
+        android:layout_height="wrap_content"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@drawable/rectangle">
-        <TextView
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="卡积分"/>
-        <View
-            android:layout_width="3dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorBlack"
-            />
-        <TextView
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="通用点"/>
-    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_history_exchange"
