--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_add_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_add_card.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
-
-    <ImageView
-        android:id="@+id/imageView_logo_item"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        app:srcCompat="@drawable/ic_points_black_24dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"/>
-
-    <LinearLayout
-        android:orientation="vertical"
+    android:layout_height="wrap_content">
+    
+    <android.support.v7.widget.CardView
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp">
-        <TextView
-            android:id="@+id/textView_merchant_name_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Apple"
-            android:textSize="22sp"
-            android:textStyle="bold"/>
+        android:layout_height="70dp"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="5dp"
+        app:cardPreventCornerOverlap="false">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:id="@+id/imageView_logo_item"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:srcCompat="@drawable/ic_points_black_24dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:id="@+id/textView_merchant_name_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="XXX"
+                android:textSize="22sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-        <TextView
-            android:id="@+id/textView_merchant_description_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="to eat"
-            android:maxLines="1"
-            android:textSize="16sp"/>
-    </LinearLayout>
 
 
 
-</LinearLayout>
+</RelativeLayout>
