--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_all_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_all_card.xml
@@ -7,28 +7,34 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView_all_card_item"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="10dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:cardCornerRadius="14dp"
         app:cardElevation="5dp"
         app:cardPreventCornerOverlap="false">
 
         <RelativeLayout
+            android:id="@+id/relative_all_card_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_height="90dp"
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:background="@drawable/circle"
                     android:id="@+id/imageView_logo_all_card_item"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:layout_marginStart="20dp"
                     android:adjustViewBounds="true"
+                    android:padding="5dp"
+                    android:layout_gravity="center_vertical"
                     app:srcCompat="@drawable/nike_logo" />
 
                 <TextView
@@ -37,6 +43,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="28dp"
+                    android:textSize="22sp"
+                    android:textColor="@color/colorWhite"
                     android:text="Nike体育专营店" />
             </LinearLayout>
 
@@ -44,30 +52,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:background="@color/colorUnable"
+                android:background="#90595858"
                 android:orientation="horizontal"
-                android:paddingBottom="5dp"
-                android:paddingEnd="20dp"
-                android:paddingStart="20dp"
-                android:paddingTop="5dp">
+                android:paddingBottom="10dp"
+                android:paddingEnd="30dp"
+                android:paddingStart="30dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:layout_alignParentStart="true"
                     android:id="@+id/textView_all_points_all_card_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="商户卡积分：200"
+                    android:text="积分：200"
                     android:textColor="@color/colorWhite"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textView_exchange_points_all_card_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:text="可兑换通用积分：20"
+                    android:text="可兑通用点：20"
                     android:textColor="@color/colorWhite"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
             </RelativeLayout>
 
         </RelativeLayout>
