--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_card_points.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_card_points.xml
@@ -34,7 +34,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="周黑鸭"
+                        android:text="XXX"
                         android:textSize="18sp"
                         android:textColor="@color/colorWhite"/>
                 </FrameLayout>
@@ -57,7 +57,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="233"
+                        android:text="0.0"
                         android:textSize="18sp"
                         android:textColor="#FFDD22"/>
                 </LinearLayout>
@@ -86,7 +86,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="23"
+                        android:text="0.0"
                         android:textSize="24sp"
                         android:textColor="@color/colorOrange"/>
                 </LinearLayout>
