--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_find.xml
@@ -6,76 +6,92 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="10dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:cardPreventCornerOverlap="false">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_centerInParent="true"
-                    android:id="@+id/imageView_logo_find"
-                    android:layout_width="78dp"
-                    android:layout_height="78dp"
-                    android:src="@drawable/nike_store" />
-            </RelativeLayout>
-
-
+            android:layout_height="match_parent">
+            <View
+                android:layout_centerVertical="true"
+                android:layout_width="10dp"
+                android:layout_height="70dp"
+                android:background="@color/colorLightOrange"/>
+            
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:orientation="vertical"
-                android:padding="10dp">
-                <TextView
-                    android:id="@+id/textView_name_find"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="name"
-                    android:textSize="24sp"
-                    android:layout_margin="5dp"
-                    android:maxLines="1"/>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/textView_type_find"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="type"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="10dp"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                android:orientation="horizontal">
 
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:id="@+id/imageView_logo_find"
+                        android:layout_width="78dp"
+                        android:layout_height="78dp"
+                        android:src="@drawable/nike_store" />
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp">
                     <TextView
-                        android:id="@+id/textView_description_find"
+                        android:id="@+id/textView_name_find"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="description"
-                        android:maxLines="3"
-                        android:layout_margin="5dp"/>
+                        android:text="name"
+                        android:textSize="24sp"
+                        android:layout_margin="2dp"
+                        android:maxLines="1"/>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/textView_description_find"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="description"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="10dp"
+                            android:maxLines="1"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/textView_type_find"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="end"
+                            android:textColor="#FF9A8616"
+                            android:text="type"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="20dp"/>
+                    </LinearLayout>
+
+
+
                 </LinearLayout>
 
-
-
             </LinearLayout>
-
-        </LinearLayout>
-
+        </RelativeLayout>
+        
     </android.support.v7.widget.CardView>
 </FrameLayout>
