--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_history_exchange.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_history_exchange.xml
@@ -1,44 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@drawable/rectangle"
-    android:layout_margin="5dp">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="30dp"
-        android:padding="10dp">
-        <TextView
-            android:id="@+id/textView_points_history_exchange_item"
-            android:layout_weight="1"
+    android:orientation="horizontal">
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent">
+        <View
+            android:id="@+id/timeline"
+            android:layout_width="1dp"
+            android:layout_height="80dp"
+            android:background="@color/colorUnable"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="40dp"
+            android:background="@color/colorUnable"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:id="@+id/imageView_history_exchange_item"
+            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="2000"
-            android:textSize="24sp"/>
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/textView_date_history_exchange_item"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="2018-7-12"/>
-    </LinearLayout>
-    <FrameLayout
-        android:layout_alignParentEnd="true"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        android:layout_marginEnd="30dp">
-        <TextView
-            android:id="@+id/textView_exchange_points_history_exchange_item"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1000"
+            android:text="Aug 8.2018"
+            android:textStyle="bold"
             android:textSize="24sp"/>
     </FrameLayout>
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_weight="3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingEnd="20dp">
+        <TextView
+            android:layout_gravity="end"
+            android:gravity="bottom"
+            android:id="@+id/textView_exchange_points_history_exchange_item"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:text="+100.0P"
+            android:textSize="24sp"/>
+        <TextView
+            android:layout_gravity="end"
+            android:id="@+id/textView_points_history_exchange_item"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:textColor="#FFA7A7A7"
+            android:text="-50.0"
+            android:textSize="18sp"/>
+    </LinearLayout>
+
+</LinearLayout>
 
