--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
@@ -14,17 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar_paying_finish"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:minHeight="?attr/actionBarSize"-->
-        <!--app:title= "兑换结果"-->
-        <!--app:theme="@style/ToolbarTheme"-->
-        <!--&gt;-->
-
-    <!--</android.support.v7.widget.Toolbar>-->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -77,6 +66,8 @@
 
     </LinearLayout>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="358dp"
@@ -92,14 +83,9 @@
             android:id="@+id/rv_finish_points"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
             android:layout_marginBottom="40dp"
             android:layout_weight="4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            >
 
         </android.support.v7.widget.RecyclerView>
 
@@ -114,7 +100,9 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="1.0" >
+
+        </android.support.v4.view.ViewPager>
 
 
         <LinearLayout
