--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_my_order.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_my_order.xml
@@ -5,10 +5,16 @@
     android:orientation="vertical"
     android:background="@color/colorBackground">
 
+    <!-- TODO: Update blank fragment layout -->
+
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_myOrder"
+        android:id="@+id/recyclerView_myOrder_overdue"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_marginTop="10dp"
+        >
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
