--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_my_coupons.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_my_coupons.xml
@@ -5,10 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.citiexchangeplatform.pointsleague.TitleBar
-        android:id="@+id/title_bar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_myOrder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:title="我的订单"
+        app:theme="@style/ToolbarTheme"
+        />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
@@ -17,10 +22,9 @@
         android:background="@color/colorWhite"
         app:tabIndicatorColor="@color/colorOrange"
         app:tabMode="fixed"
-        app:tabGravity="fill"
         app:tabSelectedTextColor="@color/colorOrange"
-        app:tabTextColor="@color/colorOrange"
-        app:tabIndicatorHeight="3dp"
+        app:tabTextColor="#E0E0E0"
+        app:tabIndicatorHeight="5dp"
         app:tabTextAppearance="@style/TabStyle"
         />
     <android.support.v4.view.ViewPager
