--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_my_coupons.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_my_coupons.xml
@@ -3,24 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
-    <com.citiexchangeplatform.pointsleague.TitleBar
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        app:tabIndicatorColor="@color/colorOrange"
-        app:tabMode="fixed"
+        android:layout_marginBottom="10dp"
+        android:background="@color/colorBackground"
         app:tabGravity="fill"
-        app:tabSelectedTextColor="@color/colorOrange"
-        app:tabTextColor="@color/colorOrange"
-        app:tabIndicatorHeight="3dp"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/colorBlack"
+        app:tabTextColor="#6E6E6E"
+        app:tabIndicatorHeight="0dp"
         app:tabTextAppearance="@style/TabStyle"
         />
     <android.support.v4.view.ViewPager
