--- a/APP/Android/PointsLeague/app/src/main/res/values/styles.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/styles.xml
@@ -16,9 +16,15 @@
         <item name="android:textColorPrimary">@android:color/black</item>
     </style>
 
+    <!--未选中时Tab文字样式-->
     <style name="TabStyle" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textSize">18sp</item>
+    </style>
+    <!--选中时Tab文字样式-->
+    <style name="TabStyleSelected" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
 
